--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -20,7 +20,13 @@ import Section from "./Section.astro";
         through a range of services including SEO, PPC, social media marketing,
         and content creation.
       </p>
-      <button class="btn-primary w-full md:w-auto">Book a consultation</button>
+      <a
+        class="btn-primary inline-block no-underline transition-transform hover:scale-105 cursor-pointer"
+        href="https://calendly.com/woi-koiso/30min"
+        target="_blank"
+      >
+        Book a consultation
+      </a>
     </div>
   </div>
 </Section>
