--- a/src/components/sections/Proposal.astro
+++ b/src/components/sections/Proposal.astro
@@ -17,7 +17,11 @@ import propImg from "../../assets/pics/proposal-pic.png";
           Contact us today to learn more about how our digital marketing
           services can help your business grow and succeed online.
         </p>
-        <button class="btn-primary">Get your free proposal</button>
+        <div>
+          <a class="btn-primary inline-block" href="#contact"
+            >Get your free proposal</a
+          >
+        </div>
       </div>
       <picture
         class="hidden md:flex absolute right-[-10%] lg:right-0 top-[-15%] h-[450px] items-center justify-center"
