--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -65,7 +65,7 @@ const description =
   "At our digital marketing agency, we offer a range of services to help businesses grow and succeed online. These services include";
 ---
 
-<Section>
+<Section id="services">
   <div class="mt-[140px] mb-5">
     <SectionTitle sectionTitle="Services" description={description} />
     <div class="grid lg:grid-cols-2 lg:grid-rows-3 gap-10">
