--- a/src/components/sections/Team.astro
+++ b/src/components/sections/Team.astro
@@ -67,8 +67,8 @@ const team = [
 ];
 ---
 
-<Section id="about">
-  <div class="mt-[140px]">
+<Section id="team">
+  <div class="mt-[140px] mb-10">
     <SectionTitle sectionTitle="Team" description={description} />
     <div
       class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 grid-rows-2 gap-10"
