--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -36,7 +36,7 @@ const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
       />
     </picture>
     <div class="flex items-end">
-      <a href={link} class="flex items-center gap-3.5"
+      <a href={link} target="_blank" class="flex items-center gap-3.5"
         ><Image src={index === 1 || index === 2 ? gob : wob} alt={alt} />
         <span class="hidden sm:block">Service Info</span></a
       >
