--- a/src/components/ui/ShortForm.astro
+++ b/src/components/ui/ShortForm.astro
@@ -7,7 +7,7 @@
       id="email"
       name="email"
       placeholder="Email"
-      class="bg-transparent w-full px-[35px] py-5 border rounded-[14px] focus:outline-none"
+      class="bg-transparent w-full px-[35px] py-5 border rounded-[14px] focus:outline-none focus:bg-[#333]"
     />
   </div>
   <button type="submit" name="submit" class="w-full sm:w-[45%] btn-tertiary"
