--- a/src/components/ui/TeamCard.astro
+++ b/src/components/ui/TeamCard.astro
@@ -14,7 +14,7 @@ const { pic, name, role, description, link } = Astro.props;
         <h3>{name}</h3>
         <p>{role}</p>
       </div>
-      <a href={link} class="absolute right-0 top-0"
+      <a href={link} target="_blank" class="absolute right-0 top-0"
         ><Image src={linkd} alt="Linkedin Logo" /></a
       >
     </div>
