--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -9,17 +9,25 @@ const { ...props } = Astro.props;
 <html lang="en">
   <MainHead {...props} />
   <style>
-    html.lenis {
+    html.lenis,
+    html.lenis body {
       height: auto;
     }
+
     .lenis.lenis-smooth {
-      scroll-behavior: auto;
+      scroll-behavior: auto !important;
     }
+
     .lenis.lenis-smooth [data-lenis-prevent] {
       overscroll-behavior: contain;
     }
+
     .lenis.lenis-stopped {
       overflow: hidden;
+    }
+
+    .lenis.lenis-smooth iframe {
+      pointer-events: none;
     }
   </style>
   <script src="../utils/lenis"></script>
