--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@ import Hero from "../components/sections/Hero.astro";
 import Process from "../components/sections/Process.astro";
 import Proposal from "../components/sections/Proposal.astro";
 import Services from "../components/sections/Services.astro";
-import Sponsors from "../components/sections/Sponsors.astro";
 import Team from "../components/sections/Team.astro";
 import Testimonials from "../components/sections/Testimonials.astro";
 import MainLayout from "../layouts/MainLayout.astro";
@@ -14,10 +13,9 @@ import "../styles/globals.css";
 
 <MainLayout
   title="Kreatif Software"
-  description="Kreatif ofrece servicios de diseño y desarrollo de software"
+  description="Ofrecemos servicios de diseño y desarrollo de software"
 >
   <Hero />
-  <Sponsors />
   <Services />
   <Proposal />
   <Cases />
