--- a/src/components/sections/Process.astro
+++ b/src/components/sections/Process.astro
@@ -6,7 +6,7 @@ import Section from "./Section.astro";
 const description = "Step-by-Step Guide to Achieving Your Business Goals";
 ---
 
-<Section id="services">
+<Section id="process">
   <div class="mt-[140px]">
     <SectionTitle
       sectionTitle="Our Working Process"
