--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -6,7 +6,10 @@ import decorForm from "../../assets/pics/contact-pic.png";
 <div
   class="flex relative justify-start items-center p-[60px] bg-[#F3F3F3] rounded-[45px] overflow-hidden"
 >
-  <form class="bg-white sm:p-6 h-full w-full lg:max-w-lg">
+  <form
+    class="bg-white sm:p-6 h-full w-full lg:max-w-lg"
+    onsubmit="preventDefault"
+  >
     <div class="flex flex-col sm:flex-row gap-[35px] sm:items-center mb-10">
       <div class="flex items-center gap-[14px]">
         <input
@@ -37,7 +40,7 @@ import decorForm from "../../assets/pics/contact-pic.png";
         id="name"
         name="name"
         placeholder="Name"
-        class="w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
+        class="focus:bg-slate-200 w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
       />
     </div>
 
@@ -48,7 +51,7 @@ import decorForm from "../../assets/pics/contact-pic.png";
         id="email"
         name="email"
         placeholder="Email"
-        class="w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
+        class="focus:bg-slate-200 w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
       />
     </div>
 
@@ -58,11 +61,10 @@ import decorForm from "../../assets/pics/contact-pic.png";
         id="message"
         name="message"
         placeholder="Message"
-        class="w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
+        class="focus:bg-slate-200 w-full px-[30px] py-[18px] border border-black rounded-[14px] text-black outline-none"
       ></textarea>
     </div>
-
-    <button type="submit" name="submit" class="btn-primary w-full">Send</button>
+    <button class="btn-primary w-full">Send</button>
   </form>
   <picture class="absolute right-[-25%] top-[2%] bottom-[2%] hidden lg:block">
     <Image src={decorForm} alt="decor" />
