--- a/src/components/sections/Proposal.astro
+++ b/src/components/sections/Proposal.astro
@@ -8,30 +8,32 @@ import propImg from "../../assets/pics/proposal-pic.png";
 
 <Section>
   <Card>
-    <div
-      class="flex bg-[#F3F3F3] rounded-[45px] p-[60px] relative mt-[123px] mb-[163px]"
-    >
-      <div class="w-full md:w-[40%] flex flex-col gap-[26px]">
-        <h2>Let's make things happen</h2>
-        <p>
-          Contact us today to learn more about how our digital marketing
-          services can help your business grow and succeed online.
-        </p>
-        <div>
-          <a class="btn-primary inline-block" href="#contact"
-            >Get your free proposal</a
-          >
-        </div>
-      </div>
-      <picture
-        class="hidden md:flex absolute right-[-10%] lg:right-0 top-[-15%] h-[450px] items-center justify-center"
+    <div class="relative">
+      <div
+        class="flex bg-[#F3F3F3] rounded-[45px] p-[60px] relative mt-[123px] mb-[163px]"
       >
-        <Image
-          src={propImg}
-          alt="This is an illustration"
-          class="hidden md:flex lg:h-full lg:w-auto"
-        />
-      </picture>
+        <div class="w-full md:w-[40%] flex flex-col gap-[26px]">
+          <h2>Let's make things happen</h2>
+          <p>
+            Contact us today to learn more about how our digital marketing
+            services can help your business grow and succeed online.
+          </p>
+          <div>
+            <a class="btn-primary inline-block" href="#contact"
+              >Get your free proposal</a
+            >
+          </div>
+        </div>
+        <picture
+          class="hidden md:flex absolute right-[-10%] lg:right-0 top-[-15%] h-[450px] items-center justify-center"
+        >
+          <Image
+            src={propImg}
+            alt="This is an illustration"
+            class="hidden md:flex lg:h-full lg:w-auto"
+          />
+        </picture>
+      </div>
     </div>
   </Card>
 </Section>
