--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,8 +8,11 @@ import Section from "./Section.astro";
   <div
     class="grid grid-cols-1 grid-template md:grid-cols-2 md:grid-rows-1 mt-[135px]"
   >
-    <div class="flex flex-col w-full lg:w-[66.5%]">
-      <h1>Navigating the digital landscape for success</h1>
+    <div id="mctr" class="relative flex flex-col w-full lg:w-[66.5%]">
+      <h1 class="">Navigating the digital landscape for success</h1>
+      <h1 id="mask" class="absolute mask">
+        Creating a <span class="text-green">powerful image</span> for your brand
+      </h1>
     </div>
     <picture class="row-span-1 md:row-span-3">
       <Image src={HeroIlust} alt="Hero Ilustration" loading="eager" />
@@ -34,4 +37,29 @@ import Section from "./Section.astro";
   .grid-template {
     grid-template-rows: auto 1fr;
   }
+  .mask {
+    mask-image: url("/mask.svg");
+    background: black;
+    mask-repeat: no-repeat;
+    mask-size: 300px;
+    color: var(--white);
+  }
 </style>
+<script>
+  import gsap from "gsap";
+
+  const mask = document.getElementById("mask");
+
+  const positionCursor = (e: MouseEvent) => {
+    const rect = mask?.getBoundingClientRect();
+    const x = e.clientX - rect.left - 150;
+    const y = e.clientY - rect.top - 150;
+
+    gsap.to(mask, {
+      webkitMaskPosition: `${x}px ${y}px`,
+      ease: "back.out",
+    });
+  };
+
+  window.addEventListener("mousemove", positionCursor);
+</script>
