--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -73,9 +73,16 @@ const links = [
             <div class="flex flex-col justify-between gap-4">
               <span> Email: examplemail.com </span>
               <span> Phone: +123 456 789 </span>
-              <span class="lg:w-3/4">
-                Address: 1234 Street Name, City Name, Country Name
-              </span>
+              <a
+                href="https://atemplate.com/item/kreativ-software"
+                target="_blank"
+              >
+                <img
+                  src="https://atemplate.com/badages-awards.svg"
+                  alt="kreativ-software | A template"
+                  width="180"
+                />
+              </a>
             </div>
           </div>
           <div class="flex-grow my-10 lg:my-0 lg:ml-12">
